<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad1"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".Biodata">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-black"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/biodata"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_margin="20dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/foto">
    </de.hdodenhof.circleimageview.CircleImageView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="200dp">

        <TextView
            android:padding="5dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="17dp"
            android:textColor="@color/black"
            android:text="@string/isiname"/>

        <TextView
            android:padding="5dp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:text="@string/isittl"/>

        <TextView
            android:padding="5dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textSize="15dp"
            android:text="@string/mottohidup"/>

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:layout_marginBottom="30dp"
            android:text="@string/isimottohidup"/>
    </LinearLayout>

    <Button
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:text="Beranda"
        android:onClick="beranda"/>

    <Button
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Artikel"
        android:onClick="artikel"/>
</LinearLayout>